playlist async service, nested subscribe

--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -5,7 +5,7 @@
     <app-playlist-list     #somg
       [selected]="selected"
       (selectedChange)="selectPlaylist($event)"
-      [items]="playlists">
+      [items]="playlists | async">
     </app-playlist-list>
 
     <!-- {{somg.selectedChange.subscribe()}} -->
