--- a/src/app/playlists/containers/playlist-view/playlist-view.component.html
+++ b/src/app/playlists/containers/playlist-view/playlist-view.component.html
@@ -9,7 +9,9 @@
     </app-playlist-list>
 
     <!-- {{somg.selectedChange.subscribe()}} -->
-        
+    <button class="btn btn-info"
+      [routerLink]="['/playlists','new']"
+    >Create New</button>        
 
   </div>
   <div class="col">
