--- a/src/app/playlists/components/playlist-form/playlist-form.component.html
+++ b/src/app/playlists/components/playlist-form/playlist-form.component.html
@@ -1,30 +1,33 @@
 <!-- <pre>{{playlist | json}}</pre>
 <pre>{{draft | json}}</pre> -->
-
 <form #formRef="ngForm">
-  <!-- <input type="text" ngModel [ngModelOptions]="{standalone:true}"> -->
 
-  <div class="form-group">
-    <label>Name:</label>
-    <input type="text" class="form-control" [ngModel]="playlist.name" name="name"  #nameRef="ngModel">
-
-    {{ 170 - nameRef.value?.length }} / 170
-  </div>
-
-  <div ngModelGroup="bananas">
+<app-card>  
+    <!-- <input type="text" ngModel [ngModelOptions]="{standalone:true}"> -->
 
     <div class="form-group">
-      <label><input type="checkbox" [ngModel]="playlist.public" name="public"> Public</label>
-    </div>
-  
-    <div class="form-group">
-      <label>Description</label>
-      <textarea [ngModel]="playlist.description" name="description"  class="form-control"></textarea>
-    </div>
-  </div>
+      <label>Name:</label>
+      <input type="text" class="form-control" [ngModel]="playlist.name" name="name" #nameRef="ngModel">
 
-  <button class="btn btn-danger" (click)="cancel()">Cancel</button>
-  <button class="btn btn-success" (click)="save(formRef)">Save</button>
+      {{ 170 - nameRef.value?.length }} / 170
+    </div>
+
+    <div ngModelGroup="bananas">
+
+      <div class="form-group">
+        <label><input type="checkbox" [ngModel]="playlist.public" name="public"> Public</label>
+      </div>
+
+      <div class="form-group">
+        <label>Description</label>
+        <textarea [ngModel]="playlist.description" name="description" class="form-control"></textarea>
+      </div>
+    </div>
+
+    <div ngProjectAs="footer">
+      <button class="btn btn-danger" (click)="cancel()">Cancel</button>
+      <button class="btn btn-success" (click)="save(formRef)">Save</button>
+    </div>    
+  </app-card>
+    
 </form>
-
-
