--- a/src/app/music-search/containers/sync-search/sync-search.component.html
+++ b/src/app/music-search/containers/sync-search/sync-search.component.html
@@ -1,7 +1,19 @@
-
 <div class="row">
   <div class="col">
-    <app-album-search></app-album-search>
+    <app-music-service-provider>
+      <div class="row">
+
+        <div class="col">
+          <app-album-search></app-album-search>
+        </div>
+        <div class="col">
+          <app-album-search></app-album-search>
+        </div>
+      </div>
+    </app-music-service-provider>
+
+
+
   </div>
   <div class="col">
     <button (click)="hide = !hide">Toggle</button>
