Album details with player

--- a/src/app/music-search/components/search-results/search-results.component.html
+++ b/src/app/music-search/components/search-results/search-results.component.html
@@ -1,7 +1,8 @@
 
 <div class="card-group">
 
-  <app-album-card *ngFor="let result of results" [album]="result">
+  <app-album-card   [routerLink]="[result.id]"  
+  *ngFor="let result of results" [album]="result">
   </app-album-card>
 
 </div>
